<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cardlayout"
    tools:context=".ResetPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:visibility="gone"
                android:background="@color/bgsnowwhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">


                    <ImageView
                        android:layout_width="@dimen/logo_w_h"
                        android:layout_height="@dimen/logo_w_h"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:contentDescription=""
                        android:src="@mipmap/ic_launcher_round"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/hintchangepassword"
                        android:textColor="#1589FF"
                        android:textSize="20dp"
                        tools:ignore="SpUsage" />

                    <EditText
                        android:id="@+id/currentpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@color/bgsnowwhite"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawableRight="@drawable/ic_star_black_24dp"
                        android:drawablePadding="10dp"
                        android:singleLine="true"
                        android:focusable="true"
                        android:hint="@string/hint_currentpassword"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/btn_grey5" />

                    <EditText
                        android:id="@+id/newpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@color/bgsnowwhite"
                        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                        android:drawableRight="@drawable/ic_star_black_24dp"
                        android:drawablePadding="10dp"
                        android:singleLine="true"
                        android:focusable="true"
                        android:hint="@string/hint_newpassword"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/btn_grey5" />

                    <EditText
                        android:id="@+id/confirmpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bgsnowwhite"
                        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                        android:drawableRight="@drawable/ic_star_black_24dp"
                        android:drawablePadding="10dp"
                        android:singleLine="true"
                        android:focusable="true"
                        android:hint="@string/hint_cpassword"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/btn_grey5" />

                    <Button
                        android:id="@+id/resetpass"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/background"
                        android:text="@string/btn_reset_password"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>