<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/bgsnowwhite"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/userImageProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:layout_marginTop="30dp"
        android:elevation="8dp"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:tint="#1589FF" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        android:visibility="gone"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="80dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/bgsnowwhite"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:focusable="true"
                android:hint="Phone no"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/btn_grey5" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="4"
                android:background="@color/bgsnowwhite"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:background="@color/bgsnowwhite"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/btn_grey5" />

                <ImageView
                    android:id="@+id/showpass"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_visibility_black_24dp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/btn_grey5" />

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="#1589FF" />

            <Button
                android:id="@+id/logbtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/background"
                android:text="@string/btn_login"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>