<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgsnowwhite"
    tools:context=".ActivationAccount">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:text="@string/action_logout"
                    android:textAllCaps="false"
                    android:textColor="#1589FF" />
                <ImageView
                    android:id="@+id/nav_profileimage"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher_round" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_gravity="center">

            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/bgsnowwhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">


                    <ImageView
                        android:layout_width="@dimen/logo_w_h"
                        android:layout_height="@dimen/logo_w_h"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:contentDescription=""
                        android:src="@mipmap/ic_launcher_round"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/usertxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/background"
                        android:gravity="center"
                        android:paddingTop="10sp"
                        android:paddingBottom="10sp"
                        android:paddingLeft="20sp"
                        android:paddingRight="20sp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/lbl_verifymail"
                        android:textColor="#1589FF"
                        android:textSize="20dp"
                        tools:ignore="SpUsage" />




                    <Button
                        android:id="@+id/sendverify"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dip"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/background"
                        android:text="@string/btn_sendverifymail"
                        android:textColor="@android:color/white" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>